# Teme-Facultate-anul1

Implementare_DFA/: CMakeLists.txt  main.cpp
Lambda-NFA/: CMakeLists.txt  config_automat  main.cpp
Site-TW/: News1.html  News2.html  Paragraf_text.txt  about_us.html  home.html  news3.html
Site-TW/CSS/: News1.css  News2.css  about_us.html.css  home.css  news3.css
Site-TW/JavaScript/: About.js  News1.js  News2.js  quiz.js  site.js
Tema-1-SD/: CMakeLists.txt  README.md  date.in  main.cpp
Tema_1_POO/: CMakeLists.txt  main.cpp
Tema_2_LFA/: .main.cpp.swo  Automat.cpp  Automat.h  CMakeLists.txt  main.cpp
Tema_2_Poo/: .gitignore  CMakeLists.txt  Graf.cpp  Graf.h  Graf_neorientat.cpp  Graf_neorientat.h  Graf_orientat.cpp  Graf_orientat.h  Lista.cpp  Lista.h  Matrice.cpp  Matrice.h  Vector.cpp  Vector.h  date.in  main.cpp
Tema_2_SD/: CMakeLists.txt  main.cpp
Tema_3_POO/: CMakeLists.txt  ContBancar.cpp  ContBancar.h  ContCurent.cpp  ContCurent.h  ContEconomii.cpp  ContEconomii.h  Data.cpp  Data.h  Exception.cpp  Exception.h  GestionareConturi.cpp  GestionareConturi.h  date.in  main.cpp
